<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by Vadim Goroshevsky
  ~ Copyright (c) 2017 The Square. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/redSquareColor">

        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"
            android:text="@string/onboarding_cancel"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:josefin_style="italic" />

        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/worker_change_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:josefin_style="italic" />

        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:text="@string/employer_rate_submit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:josefin_style="italic" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false">

        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
            android:id="@+id/name"
            style="@style/square_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_worker_step_personal_information_first_name_hint"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/surnameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false">

        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
            android:id="@+id/surname"
            style="@style/square_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_worker_step_personal_information_last_name_hint"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>