<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/whiteSquareColor">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">

            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/light_big_dark_text"
                app:josefin_style="light"
                android:text="@string/sign_up_employer_step_1_title"/>

            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sign_up_employer_step_1_title_2"
                style="@style/subheader_gray_text"
                android:layout_marginTop="5dp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView2"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:ems="10"
                        style="@style/square_edit_text"
                        android:inputType="textCapWords"
                        android:hint="@string/sign_up_employer_step_1_first_name_hint" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/last_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_employer_step_1_last_name_hint"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        style="@style/square_edit_text"
                        android:ems="10"
                        android:inputType="textCapWords"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_employer_step_1_job_title_hint"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        style="@style/square_edit_text"
                        android:ems="10"
                        android:inputType="textCapWords"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_employer_step_1_work_email_hint"
                        android:gravity="center_vertical"
                        style="@style/square_edit_text"
                        android:maxLines="1"
                        android:ems="10"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/sign_up_employer_step_1_password_hint"
                        android:gravity="center_vertical"
                        style="@style/square_edit_text"
                        android:maxLines="1"
                        android:ems="10"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password2_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_employer_step_1_password2_hint"
                        android:gravity="center_vertical"
                        style="@style/square_edit_text"
                        android:maxLines="1"
                        android:ems="10"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/company_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false">

                    <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_employer_step_1_company_name_hint"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        style="@style/square_edit_text"
                        android:ems="10"
                        android:inputType="textCapWords"/>
                </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/sign_up_employer_step_1_company_registration_number_help"
                    style="@style/subheader_gray_text"
                     />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:id="@+id/next"
                style="@style/BaseButton"
                android:layout_marginBottom="10dp"
                android:padding="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>